# Active-Searcher

./: .gitignore  README.md
shfiles/: search.sh
src/swarm_exploration/active_perception/src/: frontier_finder.cpp  hgrid.cpp  traj_visibility.cpp  uniform_grid.cpp
src/swarm_exploration/bspline_opt/src/: bspline_optimizer.cpp
src/swarm_exploration/exploration_manager/: CMakeLists.txt
src/swarm_exploration/exploration_manager/config/: swarm.rviz
src/swarm_exploration/exploration_manager/include/cluster_maker/: canopy_cluster.h  kmeans_cluster.h  point.h
src/swarm_exploration/exploration_manager/include/exploration_manager/: expl_data.h  fast_exploration_fsm.h  fast_exploration_manager.h  island_finder.h  occmap_processing.h
src/swarm_exploration/exploration_manager/launch/: simulator_light.xml  single_drone_exploration.xml  single_drone_planner.xml  swarm_exploration.launch
src/swarm_exploration/exploration_manager/msg/: CamSwitch.msg  DroneState.msg  IslandArray.msg  IslandBox.msg  PairOpt.msg
src/swarm_exploration/exploration_manager/src/: fast_exploration_fsm.cpp  fast_exploration_manager.cpp  island_finder.cpp  occmap_processing.cpp
src/swarm_exploration/path_searching/src/: astar2.cpp  kinodynamic_astar.cpp
src/swarm_exploration/plan_env/: CMakeLists.txt  sdf_map.txt
src/swarm_exploration/plan_env/src/: map_ros.cpp  sdf_map.cpp
src/swarm_exploration/plan_manage/src/: planner_manager.cpp  traj_server.cpp
src/swarm_exploration/traj_utils/src/: planning_visualization.cpp
src/swarm_exploration/utils/backward/: backward.hpp
src/uav_simulator/local_sensing/: CMakeLists.txt
src/uav_simulator/local_sensing/include/: backward.hpp
src/uav_simulator/local_sensing/src/: backward.hpp  pcl_render_node.cpp  pointcloud_render_node.cpp
src/uav_simulator/map_generator/resource/: filtered_house1.pcd  test.pcd  (+5 more)
(+45 files in other folders)
